tool.poetry]
name = "bestweather"
version = "0.1.0"
description = "A simple app to determine the best weather in select locations"
authors = ["Jack Roten <thejackroten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"